// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoInfo renders collapsed with video prop 1`] = `
<div
  className="video-info-container"
>
  <Image
    as="img"
    circular={true}
    className="channel-image"
    src="http://via.placeholder.com/48x48"
    ui={true}
  />
  <div
    className="video-info"
  >
    <div
      className="channel-name"
    >
      PlayOverwatch
    </div>
    <div
      className="videopublication-date"
    >
      Published on 
      Nov 2, 2018
    </div>
  </div>
  <Button
    as="button"
    className="subscribe-button"
    color="youtube"
  >
    SUBSCRIBE 523K
  </Button>
  <div
    className="video-description"
  >
    <div
      className="collapsed"
    >
      <Linkify
        className="Linkify"
        component="a"
        properties={Object {}}
      >
        An explosive train robbery gives McCree the chance to settle some unfinished business with a few former associates in our latest animated short: Reunion! 

Learn more about McCree: https://playoverwatch.com/en-us/heroes/mccree/

Begin your watch: http://buyoverwatch.com
Like us on Facebook: http://www.facebook.com/playoverwatch
Follow us on Twitter: http://www.twitter.com/playoverwatch
Join us on Instagram: https://www.instagram.com/playoverwatch
      </Linkify>
    </div>
    <Button
      as="button"
      className="show-more-button"
      compact={true}
      onClick={[Function]}
    >
      SHOW MORE
    </Button>
  </div>
</div>
`;

exports[`VideoInfo renders expanded with video prop 1`] = `
<div
  className="video-info-container"
>
  <Image
    as="img"
    circular={true}
    className="channel-image"
    src="http://via.placeholder.com/48x48"
    ui={true}
  />
  <div
    className="video-info"
  >
    <div
      className="channel-name"
    >
      PlayOverwatch
    </div>
    <div
      className="videopublication-date"
    >
      Published on 
      Nov 2, 2018
    </div>
  </div>
  <Button
    as="button"
    className="subscribe-button"
    color="youtube"
  >
    SUBSCRIBE 523K
  </Button>
  <div
    className="video-description"
  >
    <div
      className="expanded"
    >
      <Linkify
        className="Linkify"
        component="a"
        properties={Object {}}
      >
        An explosive train robbery gives McCree the chance to settle some unfinished business with a few former associates in our latest animated short: Reunion! 

Learn more about McCree: https://playoverwatch.com/en-us/heroes/mccree/

Begin your watch: http://buyoverwatch.com
Like us on Facebook: http://www.facebook.com/playoverwatch
Follow us on Twitter: http://www.twitter.com/playoverwatch
Join us on Instagram: https://www.instagram.com/playoverwatch
      </Linkify>
    </div>
    <Button
      as="button"
      className="show-more-button"
      compact={true}
      onClick={[Function]}
    >
      SHOW LESS
    </Button>
  </div>
</div>
`;

exports[`VideoInfo renders without props 1`] = `<div />`;
